2004-08-24 Mikhail Khodjaiants
	Moved the property pages and related classes into the newly created package - "org.eclipse.cdt.debug.internal.ui.propertypages".
	* PropertyPageMessages.properties: new
	* CBreakpointPreferenceStore.java
	* CBreakpointPropertyPage.java
	* PropertyPageMessages.java: new
	* ActionMessages.properties

2004-08-24 Mikhail Khodjaiants
	Replaced the "Breakpoint Properties" dialog by standard property pages.
	* CBreakpointPreferenceStore.java
	* CBreakpointPropertiesAction.java
	* CBreakpointPropertiesRulerAction.java
	* CBreakpointPropertiesRulerActionDelegate.java
	* CBreakpointPreferencePage.java renamed to CBreakpointPropertyPage.java
	* CBreakpointPropertiesDialog.java: removed
	* plugin.xml
	* plugin.properties
	* ActionMessages.properties

2004-08-12 Mikhail Khodjaiants
	Fix for bug 70453. Linux: error exiting Eclipse on Linux RedHat or SuSe Enterprise Server 9.
	Applied modified patch from Sean Evoy.
	* CDebugUIPlugin.java

2004-08-10 Tanya Wolff
	Fix for 70943 - externalized strings
	* plugin.xml
	* plugin.properties
	
2004-08-10 Mikhail Khodjaiants
	Fix for bug 70902. TVT3.0: Customize Perspective C++ Debug has duplicated strings.
	* plugin.xml
	
2004-08-05 Mikhail Khodjaiants
	Cosmetic fix.
	* CDebugUIMessages.properties

2004-08-04 Mikhail Khodjaiants
	New implementation of the variable types.
	* CDTDebugModelPresentation.java
	* CastToArrayActionDelegate.java
	* CastToTypeActionDelegate.java
	* DecVariableFormatActionDelegate.java
	* HexVariableFormatActionDelegate.java
	* NaturalVariableFormatActionDelegate.java
	* RestoreDefaultTypeActionDelegate.java
	* VariableFormatActionDelegate.java

2004-07-30 Mikhail Khodjaiants
	Display the error message in the variable's label if the value of variable can not be retrieved.
	* CDebugUIMessages.properties
	* CDTDebugModelPresentation.java

2004-07-23 Mikhail Khodjaiants
	More informative error messages.
	* CDebugUIMessages.properties
	* CDTDebugModelPresentation.java
