@@ -43,3 +43,5 @@ CDTDebugModelPresentation.28=[function: {0}]
 CDTDebugModelPresentation.29=[ignore count: {0}]
 CDTDebugModelPresentation.30=if
 CDTDebugModelPresentation.31=at
+CBreakpointWorkbenchAdapterFactory.0=C/C++ breakpoint
+CBreakpointWorkbenchAdapterFactory.1=C/C++ watchpoint
